# DDD_course

./: .gitignore  .ignore  DOMAIN_EVENTS_FLOW_EXPLAINED.md  DOMAIN_EVENTS_IMPLEMENTATION.md  LICENSE  Makefile  README.md  debug_beaver_bertha.py  demo_exemption_rule.py  notes_lecture1.excalidraw  notes_lecture2.excalidraw  notes_lecture3.excalidraw  notes_lecture4.excalidraw  notes_lecture5.excalidraw  pyproject.toml  test_cumulative_exemption.py  visit_flow_diagram.md
.helix/: languages.toml
src/application/: APPLICATION_ARCHITECTURE.md  application_context.py  dependency_injection.py  dto.py  external_visitor_adapter.py  external_visitor_repository.py  external_visitor_service.py  main.py  price_calculator.py  readme.md  routes.py  visitor.py
src/domain/: construction_waste_exemption_service.py  dropped_fraction.py  exceptions.py  monthly_visit_tracker.py  price.py  types.py  visit.py  weight.py
src/infrastructure/: __init__.py
tests/application/: test_application_context.py  test_calculate_price_scenarios.py  test_getVisitor.py  test_main.py  test_price_calculator.py  test_price_calculator_monthly_surcharge.py  test_routes.py
tests/domain/: test_domain_exceptions.py  test_dropped_fraction.py  test_household_exemption_rule.py  test_monthly_surcharge_customer_type.py  test_monthly_surcharge_service.py  test_monthly_visit_tracker.py  test_price.py  test_visit.py  test_visit_entity.py  test_visit_repository_interface.py  test_visitor_entity.py  test_visitor_repository_interface.py
tests/infrastructure/: test_in_memory_visit_repository.py  (+1 more)
(+46 files in other folders)
